--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
+    "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5"
   },
   "scripts": {
